--- a/README
+++ b/README
@@ -1,17 +1,19 @@
-* iConomy v4.x
-* Copyright (C) 2011  Nijikokun <nijikokun@gmail.com> 
-*                     Coelho <robertcoelho@live.com>
-*                     ShadowDrakken <shadowdrakken@gmail.com>
-* 
-* This program is free software: you can redistribute it and/or modify 
-* it under the terms of the GNU General Public License as published by 
-* the Free Software Foundation, either version 2 of the License, or 
-* (at your option) any later version. 
-* 
-* This program is distributed in the hope that it will be useful, 
-* but WITHOUT ANY WARRANTY; without even the implied warranty of 
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
-* GNU General Public License for more details. 
-* 
-* You should have received a copy of the GNU General Public License 
-* along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * iConomy by Team iCo
+ *
+ * @copyright     Copyright AniGaiku LLC (C) 2010-2011
+ * @author          Nijikokun <nijikokun@gmail.com>
+ * @author          Coelho <robertcoelho@live.com>
+ * @author       ShadowDrakken <shadowdrakken@gmail.com>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
